Work around weird Chrome flex/truncate bug
Thanks, @ItsJonQ! <3

--- a/app/styles/user-profile.sass
+++ b/app/styles/user-profile.sass
@@ -16,6 +16,7 @@ $avatar-size: 48px
   &__details
     flex: 1
     margin-left: 0.5em
+    min-width: 0
 
   &__username
     +ellipsis
